// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header/> component should render correctly 1`] = `
<nav
  className="header"
>
  <div
    className="wrapper"
  >
    <ThemeToggle />
    <BurgerMenu
      className="burgerMenu"
      onClick={[Function]}
    />
  </div>
  <div
    className="menuContainer menuHideFirstRender"
    onClick={[Function]}
  >
    <div
      className="menuContent"
      onClick={[Function]}
    >
      <CrossIcon
        className="crossIcon"
        onClick={[Function]}
      />
      <ul
        className="menuList"
      >
        <li
          className="menuItem"
        >
          <Link
            className="link menuItemMargin"
            onClick={[Function]}
            to="/"
          >
            Home
          </Link>
        </li>
        <li
          className="menuItem"
        >
          <Link
            className="link menuItemMargin"
            onClick={[Function]}
            to="/about"
          >
            About
          </Link>
        </li>
        <li
          className="menuItem menuItemMargin menuItemNoHover"
        >
          <DownloadButton />
        </li>
      </ul>
    </div>
  </div>
</nav>
`;

exports[`<Header/> component when clicking the burgerMenu icon and then clicking a menu item should then close the menu 1`] = `
<nav
  className="header"
>
  <div
    className="wrapper"
  >
    <ThemeToggle />
    <BurgerMenu
      className="burgerMenu"
      onClick={[Function]}
    />
  </div>
  <div
    className="menuContainer menuClose menuHideFirstRender"
    onClick={[Function]}
  >
    <div
      className="menuContent"
      onClick={[Function]}
    >
      <CrossIcon
        className="crossIcon"
        onClick={[Function]}
      />
      <ul
        className="menuList"
      >
        <li
          className="menuItem"
        >
          <Link
            className="link menuItemMargin"
            onClick={[Function]}
            to="/"
          >
            Home
          </Link>
        </li>
        <li
          className="menuItem"
        >
          <Link
            className="link menuItemMargin"
            onClick={[Function]}
            to="/about"
          >
            About
          </Link>
        </li>
        <li
          className="menuItem menuItemMargin menuItemNoHover"
        >
          <DownloadButton />
        </li>
      </ul>
    </div>
  </div>
</nav>
`;

exports[`<Header/> component when clicking the burgerMenu icon and then clicking on the whitespace on the menu should not close the menu 1`] = `
<nav
  className="header"
>
  <div
    className="wrapper"
  >
    <ThemeToggle />
    <BurgerMenu
      className="burgerMenu"
      onClick={[Function]}
    />
  </div>
  <div
    className="menuContainer menuOpen menuHideFirstRender"
    onClick={[Function]}
  >
    <div
      className="menuContent"
      onClick={[Function]}
    >
      <CrossIcon
        className="crossIcon crossIconShow"
        onClick={[Function]}
      />
      <ul
        className="menuList"
      >
        <li
          className="menuItem"
        >
          <Link
            className="link menuItemMargin"
            onClick={[Function]}
            to="/"
          >
            Home
          </Link>
        </li>
        <li
          className="menuItem"
        >
          <Link
            className="link menuItemMargin"
            onClick={[Function]}
            to="/about"
          >
            About
          </Link>
        </li>
        <li
          className="menuItem menuItemMargin menuItemNoHover"
        >
          <DownloadButton />
        </li>
      </ul>
    </div>
  </div>
</nav>
`;

exports[`<Header/> component when clicking the burgerMenu icon and then clicking the overlay should close the menu 1`] = `
<nav
  className="header"
>
  <div
    className="wrapper"
  >
    <ThemeToggle />
    <BurgerMenu
      className="burgerMenu"
      onClick={[Function]}
    />
  </div>
  <div
    className="menuContainer menuClose menuHideFirstRender"
    onClick={[Function]}
  >
    <div
      className="menuContent"
      onClick={[Function]}
    >
      <CrossIcon
        className="crossIcon"
        onClick={[Function]}
      />
      <ul
        className="menuList"
      >
        <li
          className="menuItem"
        >
          <Link
            className="link menuItemMargin"
            onClick={[Function]}
            to="/"
          >
            Home
          </Link>
        </li>
        <li
          className="menuItem"
        >
          <Link
            className="link menuItemMargin"
            onClick={[Function]}
            to="/about"
          >
            About
          </Link>
        </li>
        <li
          className="menuItem menuItemMargin menuItemNoHover"
        >
          <DownloadButton />
        </li>
      </ul>
    </div>
  </div>
</nav>
`;

exports[`<Header/> component when clicking the burgerMenu icon should open the sub navigation 1`] = `
<nav
  className="header"
>
  <div
    className="wrapper"
  >
    <ThemeToggle />
    <BurgerMenu
      className="burgerMenu"
      onClick={[Function]}
    />
  </div>
  <div
    className="menuContainer menuOpen menuHideFirstRender"
    onClick={[Function]}
  >
    <div
      className="menuContent"
      onClick={[Function]}
    >
      <CrossIcon
        className="crossIcon crossIconShow"
        onClick={[Function]}
      />
      <ul
        className="menuList"
      >
        <li
          className="menuItem"
        >
          <Link
            className="link menuItemMargin"
            onClick={[Function]}
            to="/"
          >
            Home
          </Link>
        </li>
        <li
          className="menuItem"
        >
          <Link
            className="link menuItemMargin"
            onClick={[Function]}
            to="/about"
          >
            About
          </Link>
        </li>
        <li
          className="menuItem menuItemMargin menuItemNoHover"
        >
          <DownloadButton />
        </li>
      </ul>
    </div>
  </div>
</nav>
`;
